Fixed cut off shadow

--- a/css/head-to-head/grid.css
+++ b/css/head-to-head/grid.css
@@ -94,4 +94,5 @@
 .visible-grid {
     height: auto;
     opacity: 1;
+    overflow: visible;
 }
